// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> Should match the bullet list snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    bullet=""
    divided={false}
    inline={false}
    items={
      Array [
        "Tomato sauce",
        "Mustard",
        "Barbecue sauce",
        "Red-wine vinegar",
        "Salsa",
        "Hot pepper sauce",
      ]
    }
    ordered={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "bullet": "",
      "children": Array [
        <List.Item
          bullet=""
          content="Tomato sauce"
          icon=""
        />,
        <List.Item
          bullet=""
          content="Mustard"
          icon=""
        />,
        <List.Item
          bullet=""
          content="Barbecue sauce"
          icon=""
        />,
        <List.Item
          bullet=""
          content="Red-wine vinegar"
          icon=""
        />,
        <List.Item
          bullet=""
          content="Salsa"
          icon=""
        />,
        <List.Item
          bullet=""
          content="Hot pepper sauce"
          icon=""
        />,
      ],
      "divided": false,
      "inline": false,
      "items": Array [
        "Tomato sauce",
        "Mustard",
        "Barbecue sauce",
        "Red-wine vinegar",
        "Salsa",
        "Hot pepper sauce",
      ],
      "ordered": true,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "Tomato sauce",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": null,
          "content": "Tomato sauce",
          "icon": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Mustard",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": null,
          "content": "Mustard",
          "icon": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Barbecue sauce",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": null,
          "content": "Barbecue sauce",
          "icon": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Red-wine vinegar",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": null,
          "content": "Red-wine vinegar",
          "icon": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Salsa",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": null,
          "content": "Salsa",
          "icon": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Hot pepper sauce",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": null,
          "content": "Hot pepper sauce",
          "icon": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "List__Ordered-sc-283kd7-1",
        "isStatic": false,
        "rules": Array [
          "margin:0;padding:0;list-style:none;counter-reset:count;li{margin-left:24px;position:relative;&:before{content:counter(count) '.';counter-increment:count;position:absolute;right:100%;margin-top:8px;margin-right:8px;}}",
          [Function],
          " ",
          [Function],
          ";",
        ],
      },
      "displayName": "OrderedList",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "List__Ordered-sc-283kd7-1",
      "target": "ol",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "bullet": "",
        "children": Array [
          <List.Item
            bullet=""
            content="Tomato sauce"
            icon=""
          />,
          <List.Item
            bullet=""
            content="Mustard"
            icon=""
          />,
          <List.Item
            bullet=""
            content="Barbecue sauce"
            icon=""
          />,
          <List.Item
            bullet=""
            content="Red-wine vinegar"
            icon=""
          />,
          <List.Item
            bullet=""
            content="Salsa"
            icon=""
          />,
          <List.Item
            bullet=""
            content="Hot pepper sauce"
            icon=""
          />,
        ],
        "divided": false,
        "inline": false,
        "items": Array [
          "Tomato sauce",
          "Mustard",
          "Barbecue sauce",
          "Red-wine vinegar",
          "Salsa",
          "Hot pepper sauce",
        ],
        "ordered": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "Tomato sauce",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": null,
            "content": "Tomato sauce",
            "icon": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Mustard",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": null,
            "content": "Mustard",
            "icon": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Barbecue sauce",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": null,
            "content": "Barbecue sauce",
            "icon": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Red-wine vinegar",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": null,
            "content": "Red-wine vinegar",
            "icon": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Salsa",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": null,
            "content": "Salsa",
            "icon": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Hot pepper sauce",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": null,
            "content": "Hot pepper sauce",
            "icon": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "List__Ordered-sc-283kd7-1",
          "isStatic": false,
          "rules": Array [
            "margin:0;padding:0;list-style:none;counter-reset:count;li{margin-left:24px;position:relative;&:before{content:counter(count) '.';counter-increment:count;position:absolute;right:100%;margin-top:8px;margin-right:8px;}}",
            [Function],
            " ",
            [Function],
            ";",
          ],
        },
        "displayName": "OrderedList",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "List__Ordered-sc-283kd7-1",
        "target": "ol",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<List /> Should match the default snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    bullet=""
    divided={false}
    inline={false}
    items={Array []}
    ordered={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "bullet": "",
      "children": Array [],
      "divided": false,
      "inline": false,
      "items": Array [],
      "ordered": false,
    },
    "ref": null,
    "rendered": Array [],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "List__Unordered-sc-283kd7-0",
        "isStatic": false,
        "rules": Array [
          "list-style:none;margin:0;",
          [Function],
          " ",
          [Function],
          " ",
          [Function],
        ],
      },
      "displayName": "UnorderedList",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "List__Unordered-sc-283kd7-0",
      "target": "ul",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "bullet": "",
        "children": Array [],
        "divided": false,
        "inline": false,
        "items": Array [],
        "ordered": false,
      },
      "ref": null,
      "rendered": Array [],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "List__Unordered-sc-283kd7-0",
          "isStatic": false,
          "rules": Array [
            "list-style:none;margin:0;",
            [Function],
            " ",
            [Function],
            " ",
            [Function],
          ],
        },
        "displayName": "UnorderedList",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "List__Unordered-sc-283kd7-0",
        "target": "ul",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<List /> Should match the divided list snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    bullet=""
    divided={true}
    inline={false}
    items={
      Array [
        "Tomato sauce",
        "Mustard",
        "Barbecue sauce",
        "Red-wine vinegar",
        "Salsa",
        "Hot pepper sauce",
      ]
    }
    ordered={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "bullet": "",
      "children": Array [
        <List.Item
          bullet=""
          content="Tomato sauce"
          icon=""
        />,
        <List.Item
          bullet=""
          content="Mustard"
          icon=""
        />,
        <List.Item
          bullet=""
          content="Barbecue sauce"
          icon=""
        />,
        <List.Item
          bullet=""
          content="Red-wine vinegar"
          icon=""
        />,
        <List.Item
          bullet=""
          content="Salsa"
          icon=""
        />,
        <List.Item
          bullet=""
          content="Hot pepper sauce"
          icon=""
        />,
      ],
      "divided": true,
      "inline": false,
      "items": Array [
        "Tomato sauce",
        "Mustard",
        "Barbecue sauce",
        "Red-wine vinegar",
        "Salsa",
        "Hot pepper sauce",
      ],
      "ordered": false,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "Tomato sauce",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": null,
          "content": "Tomato sauce",
          "icon": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Mustard",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": null,
          "content": "Mustard",
          "icon": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Barbecue sauce",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": null,
          "content": "Barbecue sauce",
          "icon": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Red-wine vinegar",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": null,
          "content": "Red-wine vinegar",
          "icon": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Salsa",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": null,
          "content": "Salsa",
          "icon": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Hot pepper sauce",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": null,
          "content": "Hot pepper sauce",
          "icon": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "List__Unordered-sc-283kd7-0",
        "isStatic": false,
        "rules": Array [
          "list-style:none;margin:0;",
          [Function],
          " ",
          [Function],
          " ",
          [Function],
        ],
      },
      "displayName": "UnorderedList",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "List__Unordered-sc-283kd7-0",
      "target": "ul",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "bullet": "",
        "children": Array [
          <List.Item
            bullet=""
            content="Tomato sauce"
            icon=""
          />,
          <List.Item
            bullet=""
            content="Mustard"
            icon=""
          />,
          <List.Item
            bullet=""
            content="Barbecue sauce"
            icon=""
          />,
          <List.Item
            bullet=""
            content="Red-wine vinegar"
            icon=""
          />,
          <List.Item
            bullet=""
            content="Salsa"
            icon=""
          />,
          <List.Item
            bullet=""
            content="Hot pepper sauce"
            icon=""
          />,
        ],
        "divided": true,
        "inline": false,
        "items": Array [
          "Tomato sauce",
          "Mustard",
          "Barbecue sauce",
          "Red-wine vinegar",
          "Salsa",
          "Hot pepper sauce",
        ],
        "ordered": false,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "Tomato sauce",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": null,
            "content": "Tomato sauce",
            "icon": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Mustard",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": null,
            "content": "Mustard",
            "icon": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Barbecue sauce",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": null,
            "content": "Barbecue sauce",
            "icon": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Red-wine vinegar",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": null,
            "content": "Red-wine vinegar",
            "icon": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Salsa",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": null,
            "content": "Salsa",
            "icon": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Hot pepper sauce",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": null,
            "content": "Hot pepper sauce",
            "icon": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "List__Unordered-sc-283kd7-0",
          "isStatic": false,
          "rules": Array [
            "list-style:none;margin:0;",
            [Function],
            " ",
            [Function],
            " ",
            [Function],
          ],
        },
        "displayName": "UnorderedList",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "List__Unordered-sc-283kd7-0",
        "target": "ul",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
